@@ -1,3 +1,7 @@
+
+18 July 2015
+ + Added VCSUI screen with basic features
+
 11 April 2013
  + Input Paths can be relative (from svn) and have forward slashes
 
